menu eleccion mascota

--- a/JuegoTamagotchi.cbp
+++ b/JuegoTamagotchi.cbp
@@ -34,15 +34,18 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Funciones.h" />
 		<Unit filename="include/Tamagotchi.h" />
 		<Unit filename="include/TamagotchiGato.h" />
-		<Unit filename="include/TamagotchiOso.h" />
 		<Unit filename="include/TamagotchiPerro.h" />
+		<Unit filename="include/TamagotchiPollito.h" />
+		<Unit filename="include/rlutil.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Funciones.cpp" />
 		<Unit filename="src/Tamagotchi.cpp" />
 		<Unit filename="src/TamagotchiGato.cpp" />
-		<Unit filename="src/TamagotchiOso.cpp" />
 		<Unit filename="src/TamagotchiPerro.cpp" />
+		<Unit filename="src/TamagotchiPollito.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
