--- a/JuegoTamagotchi.cbp
+++ b/JuegoTamagotchi.cbp
@@ -51,6 +51,7 @@
 		<Unit filename="include/Funciones.h" />
 		<Unit filename="include/Hambre.h" />
 		<Unit filename="include/Higiene.h" />
+		<Unit filename="include/Pizza.h" />
 		<Unit filename="include/Salud.h" />
 		<Unit filename="include/Suenio.h" />
 		<Unit filename="include/Tamagotchi.h" />
@@ -72,6 +73,7 @@
 		<Unit filename="src/Funciones.cpp" />
 		<Unit filename="src/Hambre.cpp" />
 		<Unit filename="src/Higiene.cpp" />
+		<Unit filename="src/Pizza.cpp" />
 		<Unit filename="src/Salud.cpp" />
 		<Unit filename="src/Suenio.cpp" />
 		<Unit filename="src/Tamagotchi.cpp" />
