--- a/JuegoTamagotchi.cbp
+++ b/JuegoTamagotchi.cbp
@@ -46,12 +46,15 @@
 		<Unit filename="include/BotonNegro.h" />
 		<Unit filename="include/BotonRojo.h" />
 		<Unit filename="include/BotonVerde.h" />
+		<Unit filename="include/CabezaSnake.h" />
 		<Unit filename="include/Collisionable.h" />
+		<Unit filename="include/CuerpoSnake.h" />
 		<Unit filename="include/Entretenimiento.h" />
 		<Unit filename="include/Funciones.h" />
 		<Unit filename="include/Hambre.h" />
 		<Unit filename="include/Higiene.h" />
 		<Unit filename="include/Jabon.h" />
+		<Unit filename="include/Manzana.h" />
 		<Unit filename="include/Pizza.h" />
 		<Unit filename="include/Salud.h" />
 		<Unit filename="include/Suenio.h" />
@@ -70,12 +73,15 @@
 		<Unit filename="src/BotonNegro.cpp" />
 		<Unit filename="src/BotonRojo.cpp" />
 		<Unit filename="src/BotonVerde.cpp" />
+		<Unit filename="src/CabezaSnake.cpp" />
 		<Unit filename="src/Collisionable.cpp" />
+		<Unit filename="src/CuerpoSnake.cpp" />
 		<Unit filename="src/Entretenimiento.cpp" />
 		<Unit filename="src/Funciones.cpp" />
 		<Unit filename="src/Hambre.cpp" />
 		<Unit filename="src/Higiene.cpp" />
 		<Unit filename="src/Jabon.cpp" />
+		<Unit filename="src/Manzana.cpp" />
 		<Unit filename="src/Pizza.cpp" />
 		<Unit filename="src/Salud.cpp" />
 		<Unit filename="src/Suenio.cpp" />
